Cloudflare Web Analytics added

--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
       }
     </style>
 
-    <!-- Plausible Analytics (swap domain with yours) -->
-    <script defer data-domain="yourdomain.com" src="https://plausible.io/js/script.js"></script>
   </head>
 
   <body class="bg-gradient-to-br from-purple-100 via-rose-50 to-pink-100 min-h-screen flex flex-col items-center justify-start py-10 px-4 text-gray-800">
@@ -49,7 +47,10 @@
 
     <!-- Footer -->
     <footer class="mt-10 text-xs text-gray-500">
-      Built with 🖤 by Dandelion Creek · <a href="https://plausible.io" class="underline" target="_blank">Analytics by Plausible</a>
+      Built with 🖤 by Dandelion Creek ·
     </footer>
+
+    <!--Cloudfare Web Analytics-->
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "c351086a9d9f47ed81c6477d221d74f3"}'></script><!-- End Cloudflare Web Analytics -->
   </body>
 </html>
